[package]
name = "mdbook-blox"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["mdbook", "markdown"]
repository = "https://github.com/wpmg/mdbook-blox"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.48", default-features = false, features = ["std", "derive"]}
env_logger = {version = "0.11.8", default-features = false}
log = "0.4.28"
mdbook = "0.4.52"
semver = "1.0.27"
serde_json = "1.0.145"
