[package]
name = "mdbook-blox"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["mdbook", "markdown"]
repository = "https://github.com/wpmg/mdbook-blox"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.48", default-features = false, features = ["std", "derive"]}
env_logger = {version = "0.11.8", default-features = false}
hex_color = {version = "3.0.0", default-features = false, features = ["serde"]}
log = "0.4.28"
mdbook = "0.4.52"
pathdiff = "0.2.3"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
semver = "1.0.27"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
toml = {version = "0.5.11"}

[dev-dependencies]
pretty_assertions = "1.4.1"
